# kombu

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .deepsource.toml  .gitignore  .landscape.yml  .pre-commit-config.yaml  .python-version  .travis.yml  AUTHORS  Changelog  Changelog.rst  FAQ  INSTALL  LICENSE  MANIFEST.in  Makefile  README.rst  SECURITY.md  THANKS  TODO  appveyor.yml  async_dual.py  async_test_big.py  async_test_queue_consume.py  async_test_queue_declare.py  changelog.html  conftest.py  consumer.py  faq.html  genindex.html  index.html  introduction.html  objects.inv  pavement.py  py-modindex.html  pyproject.toml  rabbitmq_logs.sh  search.html  searchindex.js  (+5 more)
.devcontainer/: devcontainer.json  postCreate.sh
.github/: FUNDING.yml  tidelift.yml
.github/workflows/: ci.yaml  codeql-analysis.yml  linter.yml  python-package.yml  semgrep.yml  workflow.yaml
_sources/: changelog.txt  faq.txt  introduction.txt
_sources/reference/: index.txt  kombu.abstract.txt  kombu.clocks.txt  kombu.common.txt  kombu.compression.txt  kombu.connection.txt  kombu.entity.txt  kombu.exceptions.txt  kombu.messaging.txt  kombu.mixins.txt  kombu.pidbox.txt  kombu.pools.txt  kombu.syn.txt  kombu.transport.amqplib.txt  kombu.transport.couchdb.txt  kombu.transport.django.management.commands.clean_kombu_messages.txt  kombu.transport.django.managers.txt  kombu.transport.django.models.txt  kombu.transport.django.txt  kombu.transport.pypika.txt  kombu.transport.sqlalchemy.txt  kombu.transport.virtual.txt  kombu.utils.compat.txt  kombu.utils.debug.txt  kombu.utils.encoding.txt
_sources/userguide/: connections.txt  index.txt  pools.txt  serialization.txt  simple.txt
_static/: celery.css
contrib/: doc2ghpages  requirements
contrib/release/: bump_version.py  doc4allmods  flakeplus.py  verify-reference-index.sh
contrib/requirements/: default.txt  test.txt
docs/: cloudpickle_gcs_serializer.md  conf.py  faq.rst  index.rst  introduction.rst  rewrite.rst
docs/.templates/: sidebarintro.html  sidebarlogo.html
docs/_ext/: applyxrefs.py  githubsphinx.py  literals_to_xrefs.py
docs/includes/: installation.txt  introduction.txt  resources.txt
docs/reference/: index.rst  kombu.abstract.rst  kombu.async.aws.connection.rst  kombu.async.aws.rst  kombu.async.aws.sqs.connection.rst  kombu.async.aws.sqs.message.rst  kombu.async.aws.sqs.queue.rst  kombu.async.aws.sqs.rst  kombu.async.debug.rst  kombu.async.http.base.rst  kombu.async.http.curl.rst  kombu.async.http.rst  kombu.async.hub.rst  kombu.async.rst  kombu.async.semaphore.rst  kombu.async.timer.rst  kombu.asynchronous.aws.connection.rst  kombu.asynchronous.aws.rst  kombu.asynchronous.aws.sqs.connection.rst  kombu.asynchronous.aws.sqs.queue.rst  kombu.asynchronous.aws.sqs.rst  kombu.asynchronous.http.base.rst  kombu.asynchronous.http.curl.rst  kombu.asynchronous.http.rst  kombu.asynchronous.http.urllib3_client.rst  kombu.asynchronous.hub.rst  kombu.asynchronous.rst  kombu.asynchronous.semaphore.rst  kombu.backends.base.rst  kombu.backends.memory.rst  kombu.backends.pyamqplib.rst  kombu.backends.pypika.rst  kombu.backends.pyredis.rst  kombu.clocks.rst  kombu.common.rst  kombu.compat.rst  kombu.compression.rst  kombu.connection.rst  kombu.entity.rst  kombu.exceptions.rst  (+71 more)
docs/templates/: readme.txt
docs/userguide/: connections.rst  consumers.rst  examples.rst  failover.rst  helloworld.rst  index.rst  introduction.rst  pools.rst  producers.rst  serialization.rst  simple.rst
example/: topic.py
examples/: complete_receive.py  complete_send.py  delayed_infra.py  demo_receive.py  hello_consumer.py  hello_poll.py  hello_publisher.py  memory_transport.py  nats_receive.py  nats_send.py  simple_eventlet_receive.py  simple_eventlet_send.py  simple_receive.py  simple_send.py
examples/django_celery_task_queue/: Procfile  models.py  tasks.py
examples/experimental/: async_consume.py
examples/rpc-tut6/: rpc_client.py  rpc_server.py
examples/simple_task_queue/: client.py  queues.py  tasks.py  worker.py
extra/appveyor/: install.ps1
extra/release/: bump_version.py  doc4allmods  flakeplus.py  jython-run-tests  (+1 more)
funtests/: __init__.py  setup.cfg  setup.py  transport.py
kombu/: __init__.py  abstract.py  clocks.py  common.py  compat.py  compression.py  connection.py  entity.py  exceptions.py  five.py  log.py  matcher.py  message.py  messaging.py  mixins.py  native_delayed_delivery.py  pidbox.py  pools.py  resource.py  serialization.py  serialization_cloudpickle_gcs.py  simple.py  syn.py  types.py  utils.py
reference/: index.html  kombu.abstract.html  kombu.backends.base.html  kombu.backends.html  kombu.backends.memory.html  kombu.backends.pyamqplib.html  kombu.backends.pypika.html  kombu.backends.pyredis.html  kombu.backends.virtual.html  kombu.clocks.html  kombu.common.html  kombu.compat.html  kombu.compression.html  kombu.connection.html  kombu.entity.html  kombu.exceptions.html  kombu.log.html  kombu.messaging.html  kombu.mixins.html  kombu.pidbox.html  kombu.pools.html  kombu.serialization.html  kombu.simple.html  kombu.syn.html  kombu.transport.SQS.html  kombu.transport.amqplib.html  kombu.transport.base.html  kombu.transport.beanstalk.html  kombu.transport.couchdb.html  kombu.transport.django.html  kombu.transport.django.management.commands.clean_kombu_messages.html  kombu.transport.django.managers.html  kombu.transport.django.models.html  kombu.transport.html  kombu.transport.librabbitmq.html  kombu.transport.memory.html  kombu.transport.mongodb.html  kombu.transport.pika.html  kombu.transport.pika2.html  kombu.transport.pyamqplib.html  (+17 more)
requirements/: default.txt  dev.txt  docs.txt  funtest.txt  pkgutils.txt  test-ci-py2.txt  test-ci-windows.txt  test-ci.txt  test-ci26.txt  test-ci3.txt  test-ci33.txt  test-integration.txt  test-jython.txt  test-py3k.txt  test-pypy.txt  test.txt  test3.txt
sources/: changelog.txt  index.txt  introduction.txt
t/: conftest.py  mocks.py  skip.py
userguide/: connections.html  consumers.html  examples.html  index.html  introduction.html  pools.html  producers.html  serialization.html  simple.html
(+459 files in other folders)
