[tool:pytest]
testpaths = t/unit/
python_classes = test_*

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
extend-ignore = W504, N806, N802, N801, N803

[mypy]
warn_unused_configs = True
strict = False
warn_return_any = True
follow_imports = skip
show_error_codes = True
disallow_untyped_defs = True
ignore_missing_imports = True
files =
    kombu/utils/time.py

[pep257]
ignore = D102,D104,D203,D105,D213

[bdist_rpm]
requires = amqp >= 5.

[metadata]
license_file = LICENSE
