[tool:pytest]
testpaths = t/unit/
python_classes = test_*

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
max-line-length = 117
extend-ignore =
    # classes can be lowercase, arguments and variables can be uppercase
    # whenever it makes the code more readable.
    W504, N806, N802, N801, N803
    # incompatible with black https://github.com/psf/black/issues/315#issuecomment-395457972
    E203,
    # Missing docstring in public method
    D102,
    # Missing docstring in public package
    D104,
    # Missing docstring in magic method
    D105,
    # Missing docstring in __init__
    D107,
    # First line should be in imperative mood; try rephrasing
    D401,
    # No blank lines allowed between a section header and its content
    D412,
    # ambiguous variable name '...'
    E741,
    # ambiguous class definition '...'
    E742,
per-file-ignores =
   t/*,setup.py,examples/*,docs/*,extra/*:
       # docstrings
       D,

[isort]
add_imports =
    from __future__ import annotations

[mypy]
warn_unused_configs = True
strict = False
follow_imports = skip
show_error_codes = True
disallow_untyped_defs = True
ignore_missing_imports = True
files =
    kombu/abstract.py,
    kombu/utils/debug.py,
    kombu/utils/time.py,
    kombu/utils/uuid.py,
    t/unit/utils/test_uuid.py,
    kombu/utils/text.py,
    kombu/exceptions.py,
    t/unit/test_exceptions.py,
    kombu/clocks.py,
    t/unit/test_clocks.py,
    kombu/__init__.py,
    kombu/asynchronous/__init__.py,
    kombu/asynchronous/aws/__init__.py,
    kombu/asynchronous/aws/ext.py,
    kombu/asynchronous/aws/sqs/__init__.py,
    kombu/asynchronous/aws/sqs/ext.py,
    kombu/asynchronous/http/__init__.py,
    kombu/transport/__init__.py,
    kombu/transport/virtual/__init__.py,
    kombu/utils/__init__.py,
    kombu/matcher.py,
    kombu/asynchronous/semaphore.py


[pep257]
ignore = D102,D107,D104,D203,D105,D213,D401,D413,D417

[bdist_rpm]
requires = amqp >= 5.

[metadata]
license_file = LICENSE
